AC_INIT(tcg, master)

BUILDTOOLS_INIT
BUILDTOOLS_DETECT_VERSION

AM_INIT_AUTOMAKE(foreign)
AM_MAINTAINER_MODE

AC_CONFIG_HEADER([config.h])

AC_PROG_CC
if test x"$GCC" = x"yes" ; then
   WARNING_CPPFLAGS="-W -Wall"
fi
AC_SUBST([WARNING_CPPFLAGS])

TCG_CHECK_LIBTIFF

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
