AC_INIT([tcg],[master],,,[http://github.com/nevali/tcg])

BUILDTOOLS_INIT
BUILDTOOLS_DETECT_VERSION

AM_INIT_AUTOMAKE(foreign)
AM_MAINTAINER_MODE

AC_CONFIG_HEADER([config.h])

AC_PROG_CC
if test x"$GCC" = x"yes" ; then
   WARNING_CPPFLAGS="-W -Wall"
fi
AC_SUBST([WARNING_CPPFLAGS])

TCG_CHECK_LIBTIFF
TCG_CHECK_LIBJPEG
TCG_CHECK_LIBJASPER
TCG_CHECK_LIBPNG

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
